tests/cases/ok/imported_classes_models.p4
class Point:
    x: int
    y: int

    def sum(self: Point) -> int:
        return self.x + self.y
