tests/cases/fail/nested_class.p4
def main() -> None:
    class Point:
        x: int
        y: int

    print("bad")
